--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,11 +5,13 @@
 
   pre_tasks:
     - name: Update apt cache.
-      apt: update_cache=true cache_valid_time=600
+      ansible.builtin.apt:
+        update_cache: true
+        cache_valid_time: 600
       when: ansible_os_family == 'Debian'
 
     - name: Clear out repo for Fedora.
-      set_fact:
+      ansible.builtin.set_fact:
         redis_enablerepo: ""
       when: ansible_distribution == 'Fedora'
 
