--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
-- name: restart redis
-  service: "name={{ redis_daemon }} state=restarted"
+- name: Restart redis
+  ansible.builtin.service:
+    name: "{{ redis_daemon }}"
+    state: restarted
