--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,35 +1,41 @@
 ---
 # Variable setup.
 - name: Include OS-specific variables.
-  include_vars: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_vars: "{{ ansible_os_family }}.yml"
 
 - name: Define redis_package.
-  set_fact:
+  ansible.builtin.set_fact:
     redis_package: "{{ __redis_package }}"
   when: redis_package is not defined
 
 - name: Ensure Redis configuration dir exists.
-  file:
+  ansible.builtin.file:
     path: "{{ redis_conf_path | dirname }}"
     state: directory
-    mode: 0755
+    mode: '0755'
 
 - name: Ensure Redis is configured.
-  template:
+  ansible.builtin.template:
     src: redis.conf.j2
     dest: "{{ redis_conf_path }}"
     mode: "{{ redis_conf_mode }}"
-  notify: restart redis
+  notify: Restart redis
 
 # Setup/install tasks.
-- include_tasks: setup-RedHat.yml
+- name: Include RedHat Setup Task
+  ansible.builtin.include_tasks: setup-redhat.yml
   when: ansible_os_family == 'RedHat'
 
-- include_tasks: setup-Debian.yml
+- name: Include Debian Setup Task
+  ansible.builtin.include_tasks: setup-debian.yml
   when: ansible_os_family == 'Debian'
 
-- include_tasks: setup-ArchLinux.yml
+- name: Include ArchLinux Setup Task
+  ansible.builtin.include_tasks: setup-archlinux.yml
   when: ansible_os_family == 'ArchLinux'
 
 - name: Ensure Redis is running and enabled on boot.
-  service: "name={{ redis_daemon }} state=started enabled=yes"
+  ansible.builtin.service:
+    name: "{{ redis_daemon }}"
+    state: started
+    enabled: true
