--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
   ansible.builtin.file:
     path: "{{ redis_conf_path | dirname }}"
     state: directory
-    mode: '0755'
+    mode: '2770'
 
 - name: Ensure Redis is configured.
   ansible.builtin.template:
@@ -20,6 +20,15 @@
     dest: "{{ redis_conf_path }}"
     mode: "{{ redis_conf_mode }}"
   notify: Restart redis
+
+- name: Get directory permissions
+  ansible.builtin.stat:
+    path: "{{ redis_conf_path | dirname }}"
+  register: dir_stat
+
+- name: Show directory permissions
+  ansible.builtin.debug:
+    msg: "Directory permissions are {{ dir_stat.stat.mode }}"
 
 # Setup/install tasks.
 - name: Include RedHat Setup Task
